# quantum-vault-kpqc

./: .gitignore  AUDIT-VERIFICATION-REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-pages.yml  fuzz.yml
crates/qv-cli/: Cargo.toml
crates/qv-cli/src/: main.rs
crates/qv-core/: Cargo.toml  build.rs  randombytes_shim.c
crates/qv-core/fuzz/: Cargo.toml
crates/qv-core/fuzz/fuzz_targets/: fuzz_container_parse.rs  fuzz_decrypt_pipeline.rs  fuzz_shamir_reconstruct.rs  fuzz_shamir_roundtrip.rs  fuzz_xor_protect.rs
crates/qv-core/src/: container.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs  shamir.rs  wasm.rs
crates/qv-core/src/crypto/: kem.rs  mod.rs  signature.rs
crates/qv-core/src/crypto/backend/: dev.rs  kpqc.rs  kpqc_ffi.rs  mod.rs
crates/qv-core/tests/: corpus_tests.rs  differential_tests.rs  nonce_tests.rs  tamper_tests.rs  test_vectors.rs  zeroize_tests.rs
docs/: ARCHITECTURE.md  architecture.md  container-format.md  demo-walkthrough.md  implementation-notes.md  security-audit-checklist.md  specification.md  test-vectors.md  threat-model.md
original/: haetae.d.ts  haetae.js  haetae.ts  haetae.wasm
qv-core/: Cargo.toml
wasm/: build.sh
wasm/src/: randombytes_wasm.c
web-demo/: README.md  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web-demo/e2e/: wasm.spec.ts
web-demo/public/: haetae.wasm  haetae.wasm.sha256  smaug.wasm  smaug.wasm.sha256
web-demo/src/: i18n.ts  main.ts
web-demo/src/app/: globals.css  layout.tsx  page.tsx
web-demo/src/components/: Card.tsx  DeckGrid.tsx  ParticipantPanel.tsx  StepIndicator.tsx  ThresholdControls.tsx  VaultSeal.tsx
web-demo/src/crypto/: aes.ts  haetae.ts  keywrap.ts  pipeline.ts  shamir.ts  signature.ts  smaug.ts  utils.ts
web-demo/src/crypto/wasm/: haetae.js  smaug.js
web-demo/src/hooks/: useVault.ts
web-demo/src/lib/: cards.ts  shamir.ts  types.ts  vault.ts  wasm-bridge.ts
web-demo/src/styles/: vault.css
web-demo/src/ui/: panel.ts  pipeline-ui.ts  reveal.ts  wall.ts
web-demo/src/vault/: demo.ts  file.ts  state.ts
web-demo/test-results/: .last-run.json
