[workspace]
members = [
    "crates/qv-core",
    "crates/qv-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Paul Clark"]
repository = "https://github.com/yourusername/quantum-vault"
description = "Threshold file encryption using Shamir Secret Sharing and post-quantum cryptography"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
