[workspace]
members = [
    "crates/qv-core",
    "crates/qv-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Quantum Vault Contributors"]
description = "Experimental threshold and post-quantum cryptography toolkit and demo."
license = "MIT"
repository = "https://github.com/systemslibrarian/quantum-vault-kpqc"
homepage = "https://github.com/systemslibrarian/quantum-vault-kpqc"
readme = "README.md"
keywords = ["cryptography", "threshold", "post-quantum", "aes", "shamir"]
categories = ["cryptography", "command-line-utilities", "wasm"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }