[workspace]
members = [
    "crates/qv-core",
    "crates/qv-cli",
]
exclude = [
    "crates/qv-core/fuzz",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Quantum Vault Contributors"]
description = "Experimental threshold and post-quantum cryptography toolkit and demo."
license = "MIT"
repository = "https://github.com/systemslibrarian/quantum-vault-kpqc"
homepage = "https://github.com/systemslibrarian/quantum-vault-kpqc"
readme = "README.md"
keywords = ["cryptography", "threshold", "post-quantum", "aes", "shamir"]
categories = ["cryptography", "command-line-utilities", "wasm"]

[workspace.dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
cc = "1.2"          # used by build.rs when kpqc-native is enabled
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
hkdf = "0.12"
proptest = "1.5"    # property-based testing
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true