[package]
name = "qv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core cryptographic library for Quantum Vault"

[lib]
name = "qv_core"
path = "src/lib.rs"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
getrandom.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
