[package]
name = "qv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantum Vault command-line interface — encrypt, decrypt, keygen."

[[bin]]
name = "qv"
path = "src/main.rs"

# ── Feature flags ─────────────────────────────────────────────────────────────
# Mirror qv-core feature flags so `cargo build -F kpqc-native` propagates.
[features]
default = ["dev-backend"]
dev-backend  = ["qv-core/dev-backend"]
kpqc-native  = ["qv-core/kpqc-native"]
kpqc-wasm    = ["qv-core/kpqc-wasm"]

[dependencies]
qv-core = { path = "../qv-core" }
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde_json.workspace = true
