[package]
name = "qv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantum Vault core cryptography library — AES-256-GCM, Shamir Secret Sharing, and pluggable PQ crypto."

[lib]
# cdylib  → WASM .wasm output (wasm-pack)
# rlib    → regular Rust dep (qv-cli, tests)
crate-type = ["cdylib", "rlib"]

# Enable the `wasm` feature when building with wasm-pack:
#   wasm-pack build crates/qv-core --target bundler --features wasm \
#     --out-dir web-demo/src/lib/wasm-pkg
[features]
wasm = ["dep:wasm-bindgen"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize = { workspace = true }
# wasm-bindgen is only compiled when the `wasm` feature is active.
wasm-bindgen = { version = "0.2", optional = true }

# When targeting WASM32, wire getrandom to browser crypto.getRandomValues.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
